--- a/large-anon/large-anon.cabal
+++ b/large-anon/large-anon.cabal
@@ -95,6 +95,8 @@ library
       -Wall
       -Wredundant-constraints
       -Wno-unticked-promoted-constructors
+  if flag(with-aeson-instances)
+    cpp-options: -DWITH_AESON_INSTANCES
 
   if impl(ghc >= 8.10)
     ghc-options:
@@ -184,3 +186,12 @@ Flag debug
   Description: Enable internal debugging features
   Default: False
   Manual: True
+
+  cpp-options: -DWITH_AESON_INSTANCES
+
+flag with-aeson-instances
+  description: Enable Aeson instances
+  -- don't let the solver fiddle with the flag
+  manual: True
+  -- with instances by default
+  default: True
