--- a/cabal.project
+++ b/cabal.project
@@ -1,42 +1,7 @@
-packages: large-generics
-        , large-records
-        , large-records-benchmarks
-        , large-anon
-        , beam-large-records
-        , typelet
-
--- we need https://github.com/haskell-beam/beam/pull/585
-source-repository-package
-  type: git
-  location: https://github.com/well-typed/beam
-  tag: 57a12e68727c027f0f1c25752f8c5704ddbe1516
-  subdir: beam-core beam-migrate beam-sqlite
-
--- enable for GHC head
--- repository head.hackage.ghc.haskell.org
---    url: https://ghc.gitlab.haskell.org/head.hackage/
---    secure: True
---    key-threshold: 3
---    root-keys:
---        f76d08be13e9a61a377a85e2fb63f4c5435d40f8feb3e12eb05905edb8cdea89
---        26021a13b401500c8eb2761ca95c61f2d625bfef951b939a8124ed12ecf07329
---        7541f32a4ccca4f97aea3b22f5e593ba2c0267546016b992dfadcd2fe944e55d
-
-package large-generics
-  tests: True
-
-package large-records
-  tests: True
-
-package large-records-benchmarks
-  tests: True
-
-package large-anon
-  tests: True
-  ghc-options: -dcore-lint
-
-package beam-large-records
-  tests: True
-
-package typelet
-  tests: True
+packages:
+  large-generics
+  large-records
+  large-records-benchmarks
+  large-anon
+  beam-large-records
+  typelet
