--- a/large-anon/large-anon.cabal
+++ b/large-anon/large-anon.cabal
@@ -187,29 +187,37 @@ test-suite test-large-anon
   -- if impl(ghc >= 8.10)
   --   ghc-options: -Wunused-packages
 
-  if impl(ghc >= 9.2)
-    build-tool-depends:
-      large-anon:large-anon-testsuite-fourmolu-preprocessor
+  -- if impl(ghc >= 9.2) && !flag(disableFourmoluExec)
+  --   build-tool-depends:
+  --     large-anon:large-anon-testsuite-fourmolu-preprocessor
+  -- else
+  --   cpp-options:
+  --     -DNO_FOURMOLU
 
-Executable large-anon-testsuite-fourmolu-preprocessor
-  main-is:
-      Main.hs
-  hs-source-dirs:
-      fourmolu-preprocessor
-  build-depends:
-    , base
-    , fourmolu >= 0.10.1
-    , text
-  default-language:
-      Haskell2010
-  ghc-options:
-      -Wall
+-- Executable large-anon-testsuite-fourmolu-preprocessor
+--   main-is:
+--       Main.hs
+--   hs-source-dirs:
+--       fourmolu-preprocessor
+--   build-depends:
+--     , base
+--     , fourmolu >= 0.10.1
+--     , text
+--   default-language:
+--       Haskell2010
+--   ghc-options:
+--       -Wall
 
-  -- Fourmolu is only compatible with RDP syntax from ghc 9.2 and up.
-  if impl(ghc < 9.2)
-    buildable: False
+--   -- Fourmolu is only compatible with RDP syntax from ghc 9.2 and up.
+--   if impl(ghc < 9.2) || flag(disableFourmoluExec)
+--     buildable: False
 
 Flag debug
   Description: Enable internal debugging features
   Default: False
   Manual: True
+
+-- Flag disableFourmoluExec
+--   Description: Disable executable large-anon-testsuite-fourmolu-preprocessor
+--   Default: False
+--   Manual: True
