--- a/typelet/typelet.cabal
+++ b/typelet/typelet.cabal
@@ -35,7 +35,7 @@ library
         TypeLet.Plugin.Substitution
     build-depends:
         base >= 4.13 && < 4.18
-      , ghc-tcplugin-api >= 0.10 && < 0.11
+      , ghc-tcplugin-api
 
         -- whichever versions are bundled with ghc:
       , containers
